css adjust styles, fix payment title

--- a/i18n/pt_BR.csv
+++ b/i18n/pt_BR.csv
@@ -26,3 +26,4 @@
 "Pay Later with Addi.","Pague com PIX e adiante sua vida!",module,Addi_Payment,1
 "Is simple and fast","Es fácil, rápido y seguro",module,Addi_Payment,1
 "No credit card needed and in minutes","Sin tarjetas de crédito y en minutos",module,Addi_Payment,1
+"Please use only Numbers, Hyphens o Dots","Por favor, use apenas números, hífens ou pontos"
