traduction document field validation

--- a/i18n/es_CO.csv
+++ b/i18n/es_CO.csv
@@ -28,4 +28,4 @@
 "No credit card needed and in minutes","Sin tarjetas de crédito y en minutos",module,Addi_Payment,1
 "You only need your ID and WhatsApp!","Solo necesitas tu cédula y WhatsApp para aplicar",module,Addi_Payment,1
 "100% online. No paperwork or hidden charges","Proceso 100% online y sin papeleo",module,Addi_Payment,1
-"Please use only Numbers, Hyphens o Dots","Por favor use solo números, guiones o puntos"
+"Please use only Numbers, Hyphens o Dots","Por favor use solo números"
